# ParallelProgramming

./: .gitignore
lab1/: Makefile  functions.cpp  functions.h  main.cpp
lab2/: CMakeLists.txt  arg-parser.h  debug.h  integral.cpp
lab2-old/: Makefile  integral.c  plot-results.py  test.py
time_measurment/: Makefile  compile_commands.json  main.cpp  result-plotter.py
